# ecosys

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GraphVisualize.ipynb  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  awesome.md  dataset_parameters.md  etl_and_connectors
demos/hybrid_search/: README.md  pyproject.toml
demos/hybrid_search/demo/: .gitignore  hybrid_search_demo.ipynb
demos/hybrid_search/demo/backup/: create_schema_and_load_data.ipynb
demos/hybrid_search/demo/data/: README.txt
demos/hybrid_search/demo/data/descriptions/: 1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  (+8599 more)
demos/hybrid_search/demo/data/tags/: 1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1006.txt  1007.txt  1008.txt  1009.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1033.txt  1034.txt  1035.txt  1036.txt  1037.txt  (+7729 more)
demos/hybrid_search/demo/generator/: embedding_generator.py  similarity.py
demos/hybrid_search/demo/gsql/: 1_create_schema.gsql  2_add_vector_attributes.gsql  3_load_data.gsql  4_install_queries.gsql  5_drop_graph.sh
(+3703 files in other folders)
