[project]
name = "hybrid-search-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "xunalei.lin",email = "xuanlei.lin@tigergraph.com"}
]
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "openai (>=1.65.4,<2.0.0)",
    "tigergraphx (>=0.2.0,<0.3.0)",
    "datasketch (>=1.6.5,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
